GENERATED_ITEMS =	\
	libgioopenssl.vcproj	\
	tlsbase.vcproj

EXTRA_DIST =	\
	glib-openssl.sln			\
	glib-openssl-build-defines.vsprops	\
	glib-openssl-gen-srcs.vsprops	\
	glib-openssl-install.vsprops		\
	glib-openssl-version-paths.vsprops	\
	glib-openssl-install.vcproj		\
	glib-openssl-prepbuild.vcproj	\
	libgioopenssl.vcprojin			\
	tlsbase.vcprojin			\
	$(GENERATED_ITEMS)

DISTCLEANFILES = $(GENERATED_ITEMS)
